##Text encoding: utf-8

2010-01-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: improve portability.
	* libs/gcp/fragment-atom.cc: fixed compilation warning.
	* libs/gcp/fragment.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/paint/wikipedia/wikipediatool.cc: improve portability.
	* programs/spectra/application.cc: fixed compilation warning.
	* programs/table/gchemtable-app.cc: ditto.

2010-01-03  Daniel Leidert  <daniel.leidert@wgdd.de>
	* libs/gcp/reaction-prop.cc: Fixed typo.

2010-01-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/document.cc: make things compile with OpenBabel-2.1.x.

2010-01-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.10.11).

2009-12-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/bond.h: fixed documentation typo.
	* libs/gcu/object.cc: do not access a NULL pointer when destroying objects.
	* plugins/paint/atoms/elementtool.cc: always update bond after an atom
	change.

2009-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: correctly save and load attached hydrogens position.

2009-12-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: correctly add atoms inside fragments.

2009-12-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/loader.cc: don't double free plugins dir.

2009-12-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/formula.cc: do not interpret a substring as a residue when the
	whole string is a symbol element. [#28192]

2009-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/paint/preferences.glade: periodic table is not anymor tearable
	because this feature is going to be deprecated iN both gtk+ and goffice.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/preferences.cc: ditto.
	* libs/gcp/settings.h: ditto.
	* libs/gcp/tools.cc: ditto.
	* libs/gcp/tools.h: ditto.
	* programs/paint/gchempaint.schemas.in: ditto.
